# logos-node-inspector

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  metadata.json  module.yaml
docs/: ubuntu-basecamp-checklist.md
package/: Main.qml.in  manifest.json.in  metadata.json.in
qml/: DesignSystem.qml  Main.qml
qml/components/: InfoRow.qml  MetricTile.qml  NavRailItem.qml  SeverityChip.qml
qml/panes/: ConnectionPane.qml  HostPane.qml  LogosPane.qml  LogsPane.qml  OverviewPane.qml  RecommendationsPane.qml  ServicesPane.qml
scripts/: bootstrap-github.ps1  inspect-logos-vps.sh
src/: inspector_types.h  node_inspector_controller.cpp  node_inspector_controller.h  remote_output_parser.cpp  remote_output_parser.h  ssh_collector.cpp  ssh_collector.h  status_classifier.cpp  status_classifier.h
tests/: test_remote_output_parser.cpp  test_status_classifier.cpp
tests/fixtures/: disk_full.txt  healthy_bootstrapping.txt  missing_nwaku.txt  ssh_failure.txt  unhealthy_logos.txt
